--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ h3 {
     padding-top: 5%;
 }
 
+p {
+    text-align: left;
+    padding: 3%;
+}
+
 /*NAV*/
 nav {
     position: fixed;
@@ -66,7 +71,6 @@ section {
     padding: 6% 0;
     background-color: #bbb;
     margin: auto;
-    width: 90%;
     text-align: center;
 }
 
@@ -96,13 +100,24 @@ div#skills-img img{
 
 /*Projects section*/
 
+div#upbeat-atlas-app,
+#sustain-app,
+commute-calculator-app {
+  margin-top: 5%;
+}
+
+div.project-img {
+    width: 40%;
+    display: inline-block
+}
+
 img.project-screenshot{
-    width: 30%;
+    width: 80%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 div.tech-image img {
-    width: 5%;
+    width: 7%;
 }
 
 button.project-links {
@@ -124,18 +139,14 @@ button.project-links a {
     font-size: 1rem;
 }
 
-/*upbeat*/
-div#upbeat-info p {
-    width: 45%;
-    display: inline-block;
-    vertical-align: top;
-}
+div.project-info {
 
-/*Sustain*/
-
-div.project-info p {
     width: 40%;
     display: inline-block;
+}
+
+div.project-info p {
+
     vertical-align: top;
 }
 
