--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 
 body {
-    font: "Open Sans", sans-serif;
-    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
     color: #444;
     line-height: 1.5em;
 }
@@ -16,16 +16,30 @@ nav,
 footer {
     padding: 1%,0;
     background-color: #aaa;
+    font-family: 'Poppins', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+    font-family: 'Poppins', sans-serif;
+}
+
+
+h2 {
+   font-size: 2.3rem;
 }
 
 h3 {
-    padding-top: 5%;
+    padding-bottom: 5%;
+    font-size: 2rem;
 }
 
 p {
     text-align: left;
     padding: 3%;
 }
+
 
 /*NAV*/
 nav {
@@ -48,6 +62,7 @@ div#nav-logo {
 ul#nav-links {
     float: right;
     margin-top: 25px;
+    margin-right: 40px;
 }
 
 ul#nav-links li{
@@ -62,6 +77,7 @@ ul#nav-links li a{
 
 /*HEADER*/
 header {
+    font-family: 'Archivo Narrow', sans-serif;
     padding: 12% 0;
     text-align: center
 }
@@ -88,7 +104,9 @@ div#profile-deets img {
 
 div#profile-deets p {
     display: inline-block;
-    width: 60%;
+    width: 50%;
+    padding: 0.5%;
+    vertical-align:
 }
 
 /*skills section*/
@@ -102,18 +120,29 @@ div#skills-img img{
 
 div#upbeat-atlas-app,
 #sustain-app,
-commute-calculator-app {
-  margin-top: 5%;
+#commute-calculator-app {
+  margin-top: 10%;
 }
 
 div.project-img {
-    width: 40%;
+    width: 45%;
     display: inline-block
 }
 
 img.project-screenshot{
     width: 80%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+}
+
+div.project-info {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+div.project-info p {
+    vertical-align: top;
 }
 
 div.tech-image img {
@@ -139,16 +168,24 @@ button.project-links a {
     font-size: 1rem;
 }
 
-div.project-info {
 
-    width: 40%;
-    display: inline-block;
+
+
+/*contact*/
+
+div#contact-info p {
+    margin: auto;
+    padding: 1%;
+    width: 60%;
+    text-align: center;
 }
 
-div.project-info p {
-
-    vertical-align: top;
+div#social-img {
+    width: 15%;
+    margin: auto;
 }
 
-
+div#social-img img {
+    width: 20%;
+}
 
