--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    color: #444;
     line-height: 1.5em;
 }
 
 nav,
 footer {
-    padding: 1%,0;
-    background-color: #aaa;
+    padding: 1% 0;
+    background-color: #483C46;
     font-family: 'Poppins', sans-serif;
+    color: #F4743B;
 }
 
 h1,
@@ -48,6 +48,7 @@ nav {
     left: 0;
     right: 0;
     z-index: 10;
+
 }
 
 div#nav-logo {
@@ -55,7 +56,7 @@ div#nav-logo {
     width: 30%;
     text-align: center;
     margin-top: 15px;
-    font-size: 2.5rem;
+    font-size: 2rem;
 
 }
 
@@ -68,18 +69,44 @@ ul#nav-links {
 ul#nav-links li{
     display: inline-block;
     margin-left: 32px;
+
 }
 
 ul#nav-links li a{
     text-decoration: none;
     color: black;
+    color: #F4743B;
 }
 
 /*HEADER*/
 header {
-    font-family: 'Archivo Narrow', sans-serif;
+    font-family: 'Poppins', sans-serif;
     padding: 12% 0;
-    text-align: center
+    width: 80%;
+    margin: auto;
+}
+
+div#header-title {
+    margin: auto;
+}
+
+p.header-description {
+    font-size: 1.5rem;
+    padding: 1% 3%;
+    color: #483C46;
+}
+
+p#header-p {
+   line-height: 3.7rem;
+    font-size: 5rem;
+    color: #3C6E71
+}
+
+p#header-p span {
+    color: #F4743B;
+    font-size: 10rem;
+    z-index: -1;
+    position: absolute
 }
 
 section {
@@ -96,20 +123,35 @@ section:nth-child(even) {
 
 /*About me section*/
 
-div#profile-deets img {
-    display: inline-block;
-    border-radius: 50%;
-    width: 20%;
+section#about-me-section {
+    background-image: url(images/ContourBackground.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-blend-mode: color-burn;
+    color: #483C46;
 }
 
-div#profile-deets p {
+div#profile-img{
     display: inline-block;
-    width: 50%;
-    padding: 0.5%;
-    vertical-align:
+    width: 40%;
+}
+
+div#profile-img img {
+    width: 80%
+}
+
+div#profile-deets {
+    display: inline-block;
+    width: 40%;
+    padding: 0;
 }
 
 /*skills section*/
+
+section#skills-section {
+    background-color: #DEB841;
+}
 
 div#skills-img img{
     display: inline-block;
@@ -172,6 +214,8 @@ button.project-links a {
 
 
 /*contact*/
+
+
 
 div#contact-info p {
     margin: auto;
