--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     line-height: 1.5em;
 }
 
+
 .clearfix:after {
     content: "";
     display: table;
@@ -285,11 +286,15 @@ div#contact-info p {
 }
 
 div#social-img {
-    width: 15%;
+    width: 30%;
     margin: auto;
 }
 
-div#social-img img {
-    width: 20%;
+img.social-button {
+    margin-top: 20px;
+    background-color: #F4743B;
+    width: 15%;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
