--- a/style.css
+++ b/style.css
@@ -59,13 +59,22 @@ nav {
 
 }
 
+nav > .content {
+    width: 80%;
+    height: 70px;
+    margin: 0 auto;
+}
+
 div#nav-logo {
     display: inline-block;
-    width: 30%;
-    text-align: center;
+    width: 20px;
     margin-top: 15px;
     font-size: 2rem;
+}
 
+div#nav-logo a {
+    text-decoration: none;
+    color: #F4743B;
 }
 
 ul#nav-links {
@@ -282,3 +291,6 @@ img.social-button {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+@media only screen and (max-width: 480px) {
+
+}
