--- a/style.css
+++ b/style.css
@@ -578,7 +578,11 @@ img.social-button {
     /*    OVERALL*/
 
     section {
-        padding: 15% 0;
+        padding: 19% 0;
+    }
+
+    h3 {
+        font-size: 1.6rem;
     }
 
     /*NAV*/
@@ -597,7 +601,7 @@ img.social-button {
     }
 
     ul#nav-links li a{
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         margin-left: 5px;
     }
 
@@ -631,10 +635,11 @@ img.social-button {
 
     section#about-me-section {
         width: 100%;
+        min-height: 700px;
     }
 
     p#am-section-header {
-        font-size: 2.8rem;
+        font-size: 2.2rem;
         text-align: left;
     }
 
@@ -661,7 +666,8 @@ img.social-button {
     }
 
     p.about-me {
-        font-size: 1.2rem
+        font-size: 1rem;
+        line-height: 1.3rem;
     }
 
     /*    Projects section*/
@@ -686,12 +692,13 @@ img.social-button {
     }
 
     div.project-info p {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     button.project-links {
-        width: 20%;
+        width: 90px;
         padding: 3%;
+        font-size: 1rem;
     }
 
     /*    CONTACT*/
