--- a/style.css
+++ b/style.css
@@ -441,13 +441,16 @@ img.social-button {
 /*    OVERALL*/
 
     section {
-        padding: 15% 0;
+        padding: 17% 0;
     }
 
+    h3 {
+        font-size: 1.6rem;
+    }
 /*NAV*/
     div#nav-logo {
-        font-size: 1.8rem;
-        line-height: 1.5rem;
+        font-size: 1.6rem;
+        line-height: 1.3rem;
     }
 
     ul#nav-links {
@@ -456,6 +459,10 @@ img.social-button {
 
     ul#nav-links li{
         margin-left: 20px;
+    }
+
+    ul#nav-links li a {
+        font-size: 1.1rem;
     }
 
 /*    HEADER*/
@@ -487,11 +494,12 @@ img.social-button {
 /*ABOUT ME*/
 
     section#about-me-section {
-        width: 100%;
+        width: 85%;
+        min-height: 700px;
     }
 
     p#am-section-header {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
         text-align: left;
     }
 
@@ -518,7 +526,8 @@ img.social-button {
     }
 
     p.about-me {
-        font-size: 1.2rem
+        font-size: 1.1rem;
+        line-height: 1.3rem;
     }
 
 /*    Projects section*/
@@ -543,11 +552,11 @@ img.social-button {
     }
 
     div.project-info p {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
 
     button.project-links {
-        width: 20%;
+        width: 100px;
         padding: 3%;
     }
 
