--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h2 {
 
 h3 {
     padding-bottom: 5%;
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: #F4743B;
 }
 
@@ -154,13 +154,13 @@ p.section-header {
     margin-left: 50px;
     height: 50px;
     padding-top: 10px;
-    background: -webkit-linear-gradient(right, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.5));
+    background: -webkit-linear-gradient(right, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.2));
     /*Safari 5.1-6*/
-    background: -o-linear-gradient(left, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.5));
+    background: -o-linear-gradient(left, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.2));
     /*Opera 11.1-12*/
-    background: -moz-linear-gradient(left, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.5));
+    background: -moz-linear-gradient(left, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.2));
     /*Fx 3.6-15*/
-    background: linear-gradient(to left, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.5));
+    background: linear-gradient(to left, rgba(217, 147, 81, 0.1), rgba(217, 147, 81, 0.2));
     /*Standard*/
 
 }
@@ -168,7 +168,7 @@ p.section-header {
 /*About me section*/
 
 section#about-me-section {
-    padding-top: 9%;
+    padding: 80px 0;
     padding-bottom: 9%;
     color: #fff;
     background-color: #483C46;
@@ -257,12 +257,14 @@ div#upbeat-atlas-app,
 }
 
 div.project-img {
-    width: 45%;
+    width: 52%;
     display: inline-block;
+    margin-top: 30px;
+
 }
 
 img.project-screenshot{
-    width: 80%;
+    max-width: 95%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
 }
@@ -276,7 +278,7 @@ div.project-info {
 div.project-info p {
     vertical-align: top;
     color: #3C6E71;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 div.tech-image img {
@@ -323,7 +325,7 @@ div#contact-info p {
     margin: auto;
     padding-top: 1%;
     width: 80%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: white;
 }
 
