--- a/style.css
+++ b/style.css
@@ -406,6 +406,7 @@ img.social-button {
 
     p.about-me {
         font-size: 0.9rem;
+        line-height: 1.2rem;
     }
 
     /*    Projects section*/
@@ -440,11 +441,7 @@ img.social-button {
     }
 
     div#contact-info p {
-        margin: auto;
-        padding-top: 1%;
-        width: 80%;
         font-size: 1rem;
-        color: white;
     }
 }
 
@@ -454,16 +451,17 @@ img.social-button {
 /*    OVERALL*/
 
     section {
-        padding: 17% 0;
+        padding: 100px 0;
     }
 
     h3 {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
-/*NAV*/
+
+    /*NAV*/
     div#nav-logo {
-        font-size: 1.6rem;
-        line-height: 1.3rem;
+        font-size: 1.3rem;
+        line-height: 1.1rem
     }
 
     ul#nav-links {
@@ -475,41 +473,28 @@ img.social-button {
     }
 
     ul#nav-links li a {
-        font-size: 1.1rem;
+        font-size: 0.85rem;
     }
 
 /*    HEADER*/
 
-    header {
-        padding-top: 90px;
-        width: 80%;
-    }
-
-    div#header-title {
-        margin-top: 60px;
-    }
 
     p.header-description {
-        font-size: 1.3rem;
-        line-height: 1.5rem;
+        font-size: 1rem;
+        line-height: 1.3rem;
         padding-top: 20px;
     }
 
     p#header-p {
         line-height: 3.2rem;
-        font-size: 4rem;
+        font-size: 3.7rem;
     }
 
     p#header-p span {
-        font-size: 8rem;
+        font-size: 7.5rem;
     }
 
 /*ABOUT ME*/
-
-    section#about-me-section {
-        width: 85%;
-        min-height: 700px;
-    }
 
     p#am-section-header {
         font-size: 2.5rem;
@@ -522,28 +507,25 @@ img.social-button {
     }
 
     div#profile-img{
-        display: block;
+        float: none;
         width: 95%;
-        margin-top: -15px;
     }
 
     img#profile-pic {
-        width: 100%;
+        max-width: 100%;
         margin: auto;
-
-    }
-
-    div#profile-deets {
-        display: block;
-        width: 100%;
     }
 
     p.about-me {
-        font-size: 1.1rem;
-        line-height: 1.3rem;
+        font-size: 1rem;
+        line-height: 1.2rem;
     }
 
 /*    Projects section*/
+
+    p.section-header {
+        font-size: 2.5rem;
+    }
 
     div.project-img {
         width: 90%;
@@ -565,33 +547,29 @@ img.social-button {
     }
 
     div.project-info p {
-        font-size: 1.1rem;
+        font-size: 1rem;
+        line-height: 1.2rem;
     }
 
     button.project-links {
         width: 100px;
-        padding: 3%;
+        padding: 1%;
     }
 
 /*    CONTACT*/
 
-    section#contact-section {
-        min-height: 400px;
-    }
-
     div#contact-info {
         width: 80%;
-        margin-top: 20px;
         padding: 5%;
     }
 
     div#contact-info p {
         width: 90%;
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 
     div#social-img {
-        width: 70%;
+        width: 60%;
     }
 }
 
@@ -600,146 +578,66 @@ img.social-button {
     /*    OVERALL*/
 
     section {
-        padding: 19% 0;
+        padding: 100px 0;
     }
 
     h3 {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     /*NAV*/
     div#nav-logo {
-        font-size: 1.4rem;
-        line-height: 1.1rem;
+        font-size: 1.1rem;
+        line-height: 0.9rem
     }
 
     ul#nav-links {
-        margin-left: 10px;
-        margin-right: 0;
+        margin-right: 10px;
     }
 
     ul#nav-links li{
-        margin-left: 5px;
+        margin-left: 15px;
     }
 
-    ul#nav-links li a{
-        font-size: 0.9rem;
-        margin-left: 5px;
+    ul#nav-links li a {
+        font-size: 0.85rem;
     }
 
     /*    HEADER*/
 
-    header {
-        padding-top: 90px;
-        width: 80%;
-    }
-
-    div#header-title {
-        margin-top: 60px;
-    }
-
     p.header-description {
-        font-size: 1rem;
-        line-height: 1.5rem;
+        font-size: 0.9rem;
+        line-height: 1.3rem;
         padding-top: 20px;
     }
 
     p#header-p {
         line-height: 3.2rem;
-        font-size: 3rem;
+        font-size: 3.5rem;
     }
 
     p#header-p span {
-        font-size: 6rem;
+        font-size: 6.5rem;
     }
 
     /*ABOUT ME*/
 
     section#about-me-section {
         width: 100%;
-        min-height: 700px;
     }
 
     p#am-section-header {
-        font-size: 2.2rem;
+        font-size: 2.1rem;
         text-align: left;
-    }
-
-    div#about-me-group {
-        margin: auto;
-        width: 85%;
-    }
-
-    div#profile-img{
-        display: block;
-        width: 95%;
-        margin-top: -15px;
-    }
-
-    img#profile-pic {
-        width: 100%;
-        margin: auto;
-
-    }
-
-    div#profile-deets {
-        display: block;
-        width: 100%;
-    }
-
-    p.about-me {
-        font-size: 1rem;
-        line-height: 1.3rem;
+        margin-left: 50px;
     }
 
     /*    Projects section*/
 
-    div.project-img {
-        width: 90%;
-        display: block;
-        margin: auto;
-        margin-bottom: 25px;
-        margin-top: 25px
-
+    p.section-header {
+        font-size: 2.1rem;
+        height: 40px;
+        padding-top: 5px;
     }
 
-    img.project-screenshot{
-        width: 90%;
-    }
-
-    div.project-info {
-        width: 85%;
-        display: inline-block;
-        vertical-align: top;
-    }
-
-    div.project-info p {
-        font-size: 1rem;
-    }
-
-    button.project-links {
-        width: 90px;
-        padding: 3%;
-    }
-
-    /*    CONTACT*/
-
-    section#contact-section {
-        min-height: 400px;
-    }
-
-    div#contact-info {
-        width: 85%;
-        margin-top: 20px;
-        padding: 5%;
-    }
-
-    div#contact-info p {
-        width: 90%;
-        font-size: 1.3rem;
-    }
-
-    div#social-img {
-        width: 70%;
-    }
 }
