--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ ul#nav-links {
     list-style: none;
     margin: 0;
     padding: 0 16px;
+    float: right;
 }
 
 ul#nav-links li{
@@ -108,10 +109,20 @@ ul#nav-links li a:hover {
 span.mobile-btn {
     float: right;
     display: none;
+    font-size: 1.5rem;
+}
+
+span.mobile-btn:hover {
+    cursor: pointer;
 }
 
 ul#nav-links li.close {
     display: none;
+    font-size: 2rem;
+}
+
+ul#nav-links li.close:hover {
+    cursor: pointer;
 }
 
 /*HEADER*/
@@ -612,13 +623,28 @@ img.social-button {
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         z-index: 3;
-        width: 175px;
+        width: 150px;
         transform: translateY(-400px);
         transition: all 300ms ease-in-out;
     }
 
     ul#nav-links li{
         display: block;
+    }
+
+    li.mobile-hover:hover {
+        background-color: #6f5d6c;
+        width: 100%;
+        margin: auto;
+        padding: 0;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 50px;
+        border-top-left-radius: 50px;
+    }
+
+    ul#nav-links li a:hover {
+        color: #F4743B;
     }
 
     ul#nav-links li a {
@@ -666,12 +692,14 @@ img.social-button {
     }
 
     p#header-p {
-        line-height: 3.2rem;
-        font-size: 2.6rem;
+        line-height: 2.6rem;
+        font-size: 2.4rem;
+        letter-spacing: -0.1rem;
     }
 
     p#header-p span {
-        font-size: 6.7rem;
+        font-size: 6.6rem;
+        letter-spacing: -0.3rem;
     }
 
     /*ABOUT ME*/
