--- a/style.css
+++ b/style.css
@@ -11,15 +11,6 @@ body {
     line-height: 1.5em;
 }
 
-
-/*
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-*/
-
 nav,
 footer {
 /*    padding: 0.5% 0;*/
@@ -138,6 +129,7 @@ div#header-title {
 }
 
 div#header-title img {
+    margin-top: 0;
     max-width: 100%;
 
 }
@@ -409,7 +401,7 @@ img.social-button {
     }
 
     div#header-title {
-        margin-top: 60px;
+        margin-top: 30px;
     }
 
     p.header-description {
